// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="sc-AxjAm gKsgiq"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="sc-AxjAm igzdRB"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="sc-AxjAm betTky"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a primary color 1`] = `
<div>
  <div
    class="sc-AxjAm gKsgiq"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="sc-AxjAm fxkZZe"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="sc-AxjAm iPOnKF"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="sc-AxjAm SoQYo"
    color="warning"
  />
</div>
`;
